--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 script:
-  # Test install_boost script with some boost libraries
-  - source ./install_boost.sh libboost-filesystem1.55-dev libboost-system1.55-dev
+  - ./test/run_test.sh
 
-  # Test update_gcc_version.sh script
-  - source ./update_gcc_version.sh 4.9
+env:
+  - TESTCASE=install_boost_test.sh
+  - TESTCASE=update_gcc_version_test.sh
+  - TESTCASE=setup_biicode_project_test.sh
 
-  # Test setup_biicode_project.sh script. Using the example project at test/gituser/gitproject, it should set it up to a biicode block at biiuser/biiproject (because that's the names specified in biicode.conf)
-  - cd test/gituser/gitproject
-  - source ../../../setup_biicode_project.sh
-  - ./blocks/biiuser/biiproject/check_biicode_setup.py
